--- a/styles/main.css
+++ b/styles/main.css
@@ -1,10 +1,11 @@
 @tailwind base;
 @tailwind components;
+@tailwind utilities;
 
-@import "./_fonts.css";
-
-body {
-  @apply font-sans bg-white;
+.grayscale {
+  filter: grayscale(1);
 }
 
-@tailwind utilities;
+body {
+  font-family: Roboto;
+}
